--- a/style.less
+++ b/style.less
@@ -1,4 +1,16 @@
+@width: 500px;
+@height: 600px;
+@widthbtn: 100px;
+@heightbtn: 40px;
+
 .img{
-	height: 100px;
-	width: 100px;
+	height: @height;
+	width: @width;
+}
+.text{
+	
+}
+.btn{
+	height: @heightbtn;
+	width: @widthbtn;
 }
